added index.html at root level

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
@@ -35,11 +35,11 @@
         </div>
 
         <div class="home-image">
-            <img src="../imgs/itachi.jpeg" alt="">
+            <img src="./imgs/itachi.jpeg" alt="">
         </div>
 
         <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-        <script src="script.js"></script>
+        <script src="./src/script.js"></script>
     </section>
 
     
